<?xml
    version="1.0"
    encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/name_text"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounder_border"
        android:padding="8dp"
        android:maxLines="1"
        android:hint="@string/name" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:maxLines="1"
        android:background="@drawable/rounder_border"
        android:id="@+id/email_text"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounder_border"
        android:id="@+id/password_text"
        />


</LinearLayout>